Complete first draft of quasi2D colloids

--- a/references.bib
+++ b/references.bib
@@ -814,6 +814,16 @@ title = {{Evolutionary techniques in atomistic simulation: thin films and nanopa
 volume = {7},
 year = {2003}
 }
+@article{Rycroft2009,
+author = {Rycroft, Chris H},
+doi = {10.1063/1.3215722},
+file = {:Users/David/Documents/Work/DPhil/Papers/1.3215722.pdf:pdf},
+journal = {Chaos},
+pages = {041111},
+title = {{VORO++ : A three-dimensional Voronoi cell library in C ++}},
+volume = {19},
+year = {2009}
+}
 @article{Lambert1981,
 abstract = {A general analysis of the statistics of a random network of threefold vertices is presented. It is demonstrated that Aboav's empirical formula for the number of sides mnon the neighbors of n-sided cells in a polycrystal is consistent with the conjecture that the cells are arranged randomly. Specific models for the development of a random network of cells are investigated and are found to obey relations consistent with Aboav's general formula. {\textcopyright} 1981.},
 author = {Lambert, C. J. and Weaire, D. L.},
@@ -2547,6 +2557,17 @@ pages = {074502},
 title = {{Voronoi neighbor statistics of hard-disks and hard-spheres}},
 volume = {123},
 year = {2005}
+}
+@article{Aurenhammer1987,
+author = {Aurenhammer, F},
+file = {:Users/David/Documents/Work/DPhil/Papers/Aurenhammer87.pdf:pdf},
+journal = {SIAM J Comput},
+keywords = {1,2,3,ams,cell complexes,concrete complexity,convex hulls,duality,e,efficient algorithms,f,hyperplane arrangements,in d-dimensional euclidean,introduction,laguerre metric,mos,subject classifications,voronoi diagrams,voronoi diagrams for point-sets},
+number = {1},
+pages = {78--96},
+title = {{Power diagrams: properties, algorithms and applications}},
+volume = {16},
+year = {1987}
 }
 @article{Weikai2014,
 author = {Weikai, Q and Gantapara, A P and Dijkstra, Marjolein},
