--- a/text/methods.tex
+++ b/text/methods.tex
@@ -632,6 +632,8 @@ In this way Voronoi systems provide a good complement to compare and contrast wi
      \label{fig:voromono}
 \end{figure}
 
+\davidnote{cite \cite{Rycroft2009} somewhere}
+
 \section{Analysis Methods}
 
 \subsection{Bond Length and Angle Distributions}
